--- a/src/App.css
+++ b/src/App.css
@@ -1,70 +1,36 @@
-body {
+* {
   margin: 0;
-  background-color: whitesmoke;
-  height: 100vh;
-  width: 100vw;
+  scroll-behavior: smooth;
   font-family: 'Roboto', sans-serif;
 }
-/* 
-h1 {
-  margin-top: 0;
-  font-size: 2.5em;
-  font-weight: bold;
+
+::-webkit-scrollbar {
+  width: 10px;
 }
 
-h2 {
-  font-size: 1.75em;
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
 }
 
-.App {
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.container {
   text-align: center;
 }
 
-/* Lights CSS */
-
-/* .lights-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+.brand-logo {
+  margin-left: 10px;
 }
 
-.light {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  border: 1px solid black;
-  border-radius: 15%;
-  min-width: 17vw;
-  min-height: 20vh;
-  background-color: rgb(65, 63, 63);
-  margin-top: 10px;
-  color: white;
+.nav-mobile {
+  margin-right: 20px;
 }
-
-.on-button, .off-button, .color-button {
-  font-size: 1.3em;
-  font-weight: lighter;
-  margin-right: 5px;
-  border-radius: 8px;
-  transition-duration: 0.4s;
-  background-color: rgb(65, 63, 63);
-}
-
-.on-button:hover {
-  background-color: #4CAF50;
-  color: white;
-}
-
-.off-button:hover {
-  background-color: red;
-  color: white;
-}
-
-.color-button:hover {
-  background-color: green;
-  color: white;
-} */
 
 .show {
   z-index: 1;
@@ -72,8 +38,6 @@ h2 {
   position: absolute;
   top: 30%; left: 45%; bottom: 0; right: 0;
 }
-
-/* Other CSS */
 
 .no-show {
   display: none;
