--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #F1F1F1;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -32,8 +32,16 @@
   margin-right: 20px;
 }
 
+.opaque-div {
+  z-index: 2;
+  background-color: rgba(73, 73, 73, 0.281);
+  height: 100vh;
+  width: 99vw;
+  position: absolute;
+}
+
 .show {
-  z-index: 1;
+  z-index: 3;
   margin: auto;
   position: absolute;
   top: 30%; left: 45%; bottom: 0; right: 0;
