--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,45 @@
   margin-right: 20px;
 }
 
+/* Tooltip CSS */
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+  text-align: center;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  min-width: 20vw;
+  max-width: 45vw;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  top: 150%;
+  left: 25%;
+  margin-left: -60px;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent black transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
 .opaque-div {
   z-index: 2;
   background-color: rgba(73, 73, 73, 0.281);
