--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,6 @@
   font-family: 'Roboto', sans-serif;
 }
 
-button {
-  box-sizing: border-box;
-}
-
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -22,6 +18,15 @@ button {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+.bold {
+  font-size: 1.1em;
+  font-weight: 700;
+}
+
+.bottom-gap {
+  margin-bottom: 2vh;
 }
 
 .container {
