--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@
   display: inline-block;
   border-bottom: 1px dotted black;
   text-align: center;
+  font-size: 1.5em;
 }
 
 .tooltip .tooltiptext {
