--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   font-family: 'Roboto', sans-serif;
 }
 
+#color-picker {
+  left: 50%;
+}
+
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -82,18 +86,19 @@
 }
 
 .opaque-div {
-  z-index: 2;
+  z-index: 5;
   background-color: rgba(73, 73, 73, 0.281);
   height: 100vh;
-  width: 99vw;
-  position: absolute;
+  width: 100vw;
+  position: fixed;
 }
 
 .show {
-  z-index: 3;
-  margin: auto;
-  position: absolute;
-  top: 30%; left: 45%; bottom: 0; right: 0;
+  z-index: 6;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .no-show {
